[package]
name = "floem-things"
edition = "2021"
version = "0.1.0"

[dependencies]
floem = { git = "https://github.com/lapce/floem", default-features = false }

async-compat = { version = "0.2.3", optional = true }
async-std = { version = "1.12.0", optional = true }
bytes = { version = "1.5.0", optional = true }
crossbeam-channel = { version = "0.5.12", optional = true }
reqwest = { version = "0.11.27", optional = true, features = ["default-tls"], default-features = false }
smol = { version = "2.0.0", optional = true }
tokio = { version = "1.36.0", default-features = false, optional = true }
xxhash-rust = { version = "0.8.10", optional = true, features = ["xxh64", "xxh3"] }
dashmap = { version = "5.5.3", optional = true, features = ["inline"] }
url = { version = "2.5.0", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros"] }
smol = { version = "2.0.0" }

[features]
default = ["floem/rfd-async-std"]
async-img = ["dep:bytes", "dep:reqwest", "dep:crossbeam-channel", "dep:url"]
cache = ["async-img", "dep:xxhash-rust", "dep:dashmap"]
tokio = ["dep:tokio", "floem/rfd-tokio"]
async-std = ["dep:async-std", "dep:async-compat", "floem/rfd-async-std"]
smol = ["dep:smol", "dep:async-compat", "floem/rfd-async-std"]
thread = ["default", "reqwest/blocking"]
